Fix logo on mobile view

--- a/logo.scss
+++ b/logo.scss
@@ -18,6 +18,8 @@ a[href="/"] {
   background: transparent url(/img/pb-icon.svg) no-repeat top/41% auto !important;
   box-sizing: border-box;
   display: block;
+  margin-left: -24px;
+  margin-top: 1px;
 }
 
 .brand {
@@ -38,7 +40,8 @@ a[href="/"] {
 }
 
 img[alt="Mastodon"],
-.landing-page h1 small {
+.landing-page h1 small,
+a[href="/"] svg {
   visibility: hidden;
 }
 
